compiler/parser.output
   0  $accept : %entry% $end

   1  primtype : TYPE
   2           | LIST LTGEN primtype GTGEN

   3  program :
   4          | program stmt SEMI
   5          | program func_decl

   6  datatype_list : datatype_list COMMA primtype
   7                | primtype
   8                |

   9  return_type : primtype
  10              | datatype_list

  11  func_decl : FUNC ID LPAREN arguments RPAREN return_type LBRACE fstmt_list RBRACE
  12            | FUNC ID LPAREN arguments RPAREN LBRACE fstmt_list RBRACE

  13  arguments :
  14            | formal_list

  15  formal_list : primtype ID
  16              | primtype ID ASSIGN lit
  17              | formal_list COMMA primtype ID
  18              | formal_list COMMA primtype ID ASSIGN lit

  19  var_decl : primtype ID
  20           | primtype ID ASSIGN expr

  21  fstmt_list :
  22             | fstmt_list func_stmt

  23  ret_expr_list : expr
  24                | ret_expr_list COMMA expr

  25  func_stmt : RETURN ret_expr_list SEMI
  26            | stmt SEMI

  27  stmt : print
  28       | var_decl
  29       | ID ASSIGN expr
  30       | IF LPAREN expr RPAREN stmt
  31       | IF LPAREN expr RPAREN stmt ELSE stmt
  32       | FOR LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt
  33       | WHILE LPAREN expr RPAREN stmt

  34  print : PRINTLN LPAREN expression_list RPAREN
  35        | PRINTF LPAREN expression_list RPAREN

  36  expr_opt :
  37           | expr

  38  lit : INT_VAL
  39      | BOOL_LIT
  40      | STRING_LIT
  41      | FLOAT_LIT

  42  fcall : ID LPAREN expression_list_opt RPAREN

  43  expr : lit
  44       | ID
  45       | expr PLUS expr
  46       | expr MINUS expr
  47       | expr TIMES expr
  48       | expr DIVIDE expr
  49       | expr EQ expr
  50       | expr NEQ expr
  51       | expr LT expr
  52       | expr LEQ expr
  53       | expr GT expr
  54       | expr GEQ expr
  55       | fcall
  56       | LPAREN expr RPAREN
  57       | LBRACKET expression_list_opt RBRACKET

  58  expression_list : expression_list_internal

  59  expression_list_opt :
  60                      | expression_list

  61  expression_list_internal : expr
  62                           | expression_list_internal COMMA expr

  63  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (63)
	program : .  (3)

	.  reduce 3

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . stmt SEMI  (4)
	program : program . func_decl  (5)
	%entry% : '\001' program .  (63)

	LIST  shift 4
	IF  shift 5
	FOR  shift 6
	WHILE  shift 7
	FUNC  shift 8
	PRINTLN  shift 9
	PRINTF  shift 10
	ID  shift 11
	TYPE  shift 12
	$end  reduce 63

	primtype  goto 13
	stmt  goto 14
	func_decl  goto 15
	var_decl  goto 16
	print  goto 17


state 4
	primtype : LIST . LTGEN primtype GTGEN  (2)

	LTGEN  shift 18
	.  error


state 5
	stmt : IF . LPAREN expr RPAREN stmt  (30)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (31)

	LPAREN  shift 19
	.  error


state 6
	stmt : FOR . LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (32)

	LPAREN  shift 20
	.  error


state 7
	stmt : WHILE . LPAREN expr RPAREN stmt  (33)

	LPAREN  shift 21
	.  error


state 8
	func_decl : FUNC . ID LPAREN arguments RPAREN return_type LBRACE fstmt_list RBRACE  (11)
	func_decl : FUNC . ID LPAREN arguments RPAREN LBRACE fstmt_list RBRACE  (12)

	ID  shift 22
	.  error


state 9
	print : PRINTLN . LPAREN expression_list RPAREN  (34)

	LPAREN  shift 23
	.  error


state 10
	print : PRINTF . LPAREN expression_list RPAREN  (35)

	LPAREN  shift 24
	.  error


state 11
	stmt : ID . ASSIGN expr  (29)

	ASSIGN  shift 25
	.  error


state 12
	primtype : TYPE .  (1)

	.  reduce 1


state 13
	var_decl : primtype . ID  (19)
	var_decl : primtype . ID ASSIGN expr  (20)

	ID  shift 26
	.  error


state 14
	program : program stmt . SEMI  (4)

	SEMI  shift 27
	.  error


state 15
	program : program func_decl .  (5)

	.  reduce 5


state 16
	stmt : var_decl .  (28)

	.  reduce 28


state 17
	stmt : print .  (27)

	.  reduce 27


state 18
	primtype : LIST LTGEN . primtype GTGEN  (2)

	LIST  shift 4
	TYPE  shift 12
	.  error

	primtype  goto 28


state 19
	stmt : IF LPAREN . expr RPAREN stmt  (30)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (31)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 37
	fcall  goto 38


state 20
	stmt : FOR LPAREN . expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (32)
	expr_opt : .  (36)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	SEMI  reduce 36

	lit  goto 36
	expr  goto 39
	expr_opt  goto 40
	fcall  goto 38


state 21
	stmt : WHILE LPAREN . expr RPAREN stmt  (33)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 41
	fcall  goto 38


state 22
	func_decl : FUNC ID . LPAREN arguments RPAREN return_type LBRACE fstmt_list RBRACE  (11)
	func_decl : FUNC ID . LPAREN arguments RPAREN LBRACE fstmt_list RBRACE  (12)

	LPAREN  shift 42
	.  error


state 23
	print : PRINTLN LPAREN . expression_list RPAREN  (34)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 43
	expression_list  goto 44
	fcall  goto 38
	expression_list_internal  goto 45


state 24
	print : PRINTF LPAREN . expression_list RPAREN  (35)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 43
	expression_list  goto 46
	fcall  goto 38
	expression_list_internal  goto 45


state 25
	stmt : ID ASSIGN . expr  (29)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 47
	fcall  goto 38


state 26
	var_decl : primtype ID .  (19)
	var_decl : primtype ID . ASSIGN expr  (20)

	ASSIGN  shift 48
	SEMI  reduce 19
	ELSE  reduce 19


state 27
	program : program stmt SEMI .  (4)

	.  reduce 4


state 28
	primtype : LIST LTGEN primtype . GTGEN  (2)

	GTGEN  shift 49
	.  error


state 29
	expr : LPAREN . expr RPAREN  (56)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 50
	fcall  goto 38


state 30
	expr : LBRACKET . expression_list_opt RBRACKET  (57)
	expression_list_opt : .  (59)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	RBRACKET  reduce 59

	lit  goto 36
	expr  goto 43
	expression_list  goto 51
	fcall  goto 38
	expression_list_opt  goto 52
	expression_list_internal  goto 45


state 31
	fcall : ID . LPAREN expression_list_opt RPAREN  (42)
	expr : ID .  (44)

	LPAREN  shift 53
	SEMI  reduce 44
	RPAREN  reduce 44
	COMMA  reduce 44
	RBRACKET  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	LT  reduce 44
	LEQ  reduce 44
	GT  reduce 44
	GEQ  reduce 44
	ELSE  reduce 44


state 32
	lit : STRING_LIT .  (40)

	.  reduce 40


state 33
	lit : INT_VAL .  (38)

	.  reduce 38


state 34
	lit : FLOAT_LIT .  (41)

	.  reduce 41


state 35
	lit : BOOL_LIT .  (39)

	.  reduce 39


state 36
	expr : lit .  (43)

	.  reduce 43


state 37
	stmt : IF LPAREN expr . RPAREN stmt  (30)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (31)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	RPAREN  shift 54
	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	.  error


state 38
	expr : fcall .  (55)

	.  reduce 55


state 39
	expr_opt : expr .  (37)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	SEMI  reduce 37
	RPAREN  reduce 37


state 40
	stmt : FOR LPAREN expr_opt . SEMI expr_opt SEMI expr_opt RPAREN stmt  (32)

	SEMI  shift 65
	.  error


state 41
	stmt : WHILE LPAREN expr . RPAREN stmt  (33)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	RPAREN  shift 66
	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	.  error


state 42
	func_decl : FUNC ID LPAREN . arguments RPAREN return_type LBRACE fstmt_list RBRACE  (11)
	func_decl : FUNC ID LPAREN . arguments RPAREN LBRACE fstmt_list RBRACE  (12)
	arguments : .  (13)

	LIST  shift 4
	TYPE  shift 12
	RPAREN  reduce 13

	primtype  goto 67
	arguments  goto 68
	formal_list  goto 69


state 43
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expression_list_internal : expr .  (61)

	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	RPAREN  reduce 61
	COMMA  reduce 61
	RBRACKET  reduce 61


state 44
	print : PRINTLN LPAREN expression_list . RPAREN  (34)

	RPAREN  shift 70
	.  error


state 45
	expression_list : expression_list_internal .  (58)
	expression_list_internal : expression_list_internal . COMMA expr  (62)

	COMMA  shift 71
	RPAREN  reduce 58
	RBRACKET  reduce 58


state 46
	print : PRINTF LPAREN expression_list . RPAREN  (35)

	RPAREN  shift 72
	.  error


state 47
	stmt : ID ASSIGN expr .  (29)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	SEMI  reduce 29
	ELSE  reduce 29


state 48
	var_decl : primtype ID ASSIGN . expr  (20)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 73
	fcall  goto 38


state 49
	primtype : LIST LTGEN primtype GTGEN .  (2)

	.  reduce 2


state 50
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : LPAREN expr . RPAREN  (56)

	RPAREN  shift 74
	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	.  error


state 51
	expression_list_opt : expression_list .  (60)

	.  reduce 60


state 52
	expr : LBRACKET expression_list_opt . RBRACKET  (57)

	RBRACKET  shift 75
	.  error


state 53
	fcall : ID LPAREN . expression_list_opt RPAREN  (42)
	expression_list_opt : .  (59)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	RPAREN  reduce 59

	lit  goto 36
	expr  goto 43
	expression_list  goto 51
	fcall  goto 38
	expression_list_opt  goto 76
	expression_list_internal  goto 45


state 54
	stmt : IF LPAREN expr RPAREN . stmt  (30)
	stmt : IF LPAREN expr RPAREN . stmt ELSE stmt  (31)

	LIST  shift 4
	IF  shift 5
	FOR  shift 6
	WHILE  shift 7
	PRINTLN  shift 9
	PRINTF  shift 10
	ID  shift 11
	TYPE  shift 12
	.  error

	primtype  goto 13
	stmt  goto 77
	var_decl  goto 16
	print  goto 17


state 55
	expr : expr PLUS . expr  (45)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 78
	fcall  goto 38


state 56
	expr : expr MINUS . expr  (46)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 79
	fcall  goto 38


state 57
	expr : expr TIMES . expr  (47)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 80
	fcall  goto 38


state 58
	expr : expr DIVIDE . expr  (48)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 81
	fcall  goto 38


state 59
	expr : expr EQ . expr  (49)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 82
	fcall  goto 38


state 60
	expr : expr NEQ . expr  (50)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 83
	fcall  goto 38


state 61
	expr : expr LT . expr  (51)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 84
	fcall  goto 38


state 62
	expr : expr LEQ . expr  (52)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 85
	fcall  goto 38


state 63
	expr : expr GT . expr  (53)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 86
	fcall  goto 38


state 64
	expr : expr GEQ . expr  (54)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 87
	fcall  goto 38


state 65
	stmt : FOR LPAREN expr_opt SEMI . expr_opt SEMI expr_opt RPAREN stmt  (32)
	expr_opt : .  (36)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	SEMI  reduce 36

	lit  goto 36
	expr  goto 39
	expr_opt  goto 88
	fcall  goto 38


state 66
	stmt : WHILE LPAREN expr RPAREN . stmt  (33)

	LIST  shift 4
	IF  shift 5
	FOR  shift 6
	WHILE  shift 7
	PRINTLN  shift 9
	PRINTF  shift 10
	ID  shift 11
	TYPE  shift 12
	.  error

	primtype  goto 13
	stmt  goto 89
	var_decl  goto 16
	print  goto 17


state 67
	formal_list : primtype . ID  (15)
	formal_list : primtype . ID ASSIGN lit  (16)

	ID  shift 90
	.  error


state 68
	func_decl : FUNC ID LPAREN arguments . RPAREN return_type LBRACE fstmt_list RBRACE  (11)
	func_decl : FUNC ID LPAREN arguments . RPAREN LBRACE fstmt_list RBRACE  (12)

	RPAREN  shift 91
	.  error


state 69
	arguments : formal_list .  (14)
	formal_list : formal_list . COMMA primtype ID  (17)
	formal_list : formal_list . COMMA primtype ID ASSIGN lit  (18)

	COMMA  shift 92
	RPAREN  reduce 14


state 70
	print : PRINTLN LPAREN expression_list RPAREN .  (34)

	.  reduce 34


state 71
	expression_list_internal : expression_list_internal COMMA . expr  (62)

	LPAREN  shift 29
	LBRACKET  shift 30
	ID  shift 31
	STRING_LIT  shift 32
	INT_VAL  shift 33
	FLOAT_LIT  shift 34
	BOOL_LIT  shift 35
	.  error

	lit  goto 36
	expr  goto 93
	fcall  goto 38


state 72
	print : PRINTF LPAREN expression_list RPAREN .  (35)

	.  reduce 35


state 73
	var_decl : primtype ID ASSIGN expr .  (20)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	PLUS  shift 55
	MINUS  shift 56
	TIMES  shift 57
	DIVIDE  shift 58
	EQ  shift 59
	NEQ  shift 60
	LT  shift 61
	LEQ  shift 62
	GT  shift 63
	GEQ  shift 64
	SEMI  reduce 20
	ELSE  reduce 20


state 74
	expr : LPAREN expr RPAREN .  (56)

	.  reduce 56


state 75
	expr : LBRACKET expression_list_opt RBRACKET .  (57)

	.  reduce 57


state 76
	fcall : ID LPAREN expression_list_opt . RPAREN  (42)

	RPAREN  shift 94
	.  error


state 77
	stmt : IF LPAREN expr RPAREN stmt .  (30)
	stmt : IF LPAREN expr RPAREN stmt . ELSE stmt  (31)

	ELSE  shift 95
	SEMI  reduce 30


state 78
	expr : expr . PLUS expr  (45)
	expr : expr PLUS expr .  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	TIMES  shift 57
	DIVIDE  shift 58
	SEMI  reduce 45
	RPAREN  reduce 45
	COMMA  reduce 45
	RBRACKET  reduce 45
	PLUS  reduce 45
	MINUS  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	LT  reduce 45
	LEQ  reduce 45
	GT  reduce 45
	GEQ  reduce 45
	ELSE  reduce 45


state 79
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr MINUS expr .  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)

	TIMES  shift 57
	DIVIDE  shift 58
	SEMI  reduce 46
	RPAREN  reduce 46
	COMMA  reduce 46
	RBRACKET  reduce 46
	PLUS  reduce 46
	MINUS  reduce 46
	EQ  reduce 46
	NEQ  reduce 46
	LT  reduce 46
	LEQ  reduce 46
	GT  reduce 46
	GEQ  reduce 46
	ELSE  reduce 46

